add UI for splash screen, login screen andd logic

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,35 +10,24 @@
         android:id="@+id/weBudget_logo"
         android:layout_width="307dp"
         android:layout_height="342dp"
-        app:layout_constraintBottom_toTopOf="@+id/email_field"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.461"
+        app:layout_constraintVertical_bias="0.344"
         app:srcCompat="@drawable/weBudget" />
 
-    <EditText
-        android:id="@+id/email_field"
-        android:layout_width="264dp"
-        android:layout_height="59dp"
-        android:ems="10"
-        android:hint="Email Address"
-        android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="73dp"
-        tools:layout_editor_absoluteY="433dp" />
-
-    <EditText
-        android:id="@+id/password_field"
-        android:layout_width="264dp"
-        android:layout_height="59dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
+    <TextView
+        android:id="@+id/weBudget_title"
+        android:layout_width="208dp"
+        android:layout_height="50dp"
+        android:text="weBudget"
+        android:textAlignment="center"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_field"
+        app:layout_constraintTop_toBottomOf="@+id/weBudget_logo"
         app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
