--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_grey"
     android:padding="@dimen/box_inset_layout_padding"
     tools:context=".LoginActivity"
     tools:deviceIds="wear">
@@ -23,26 +22,25 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/weBudget" />
+            app:srcCompat="@drawable/webudget" />
 
         <EditText
             android:id="@+id/email_input"
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_marginTop="24dp"
-            android:background="@drawable/roundedinput"
             android:ems="10"
             android:hint="Email Address"
             android:inputType="textEmailAddress"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            tools:layout_editor_absoluteX="80dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <EditText
             android:id="@+id/password_input"
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_marginTop="12dp"
-            android:background="@drawable/roundedinput"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
