--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.344"
-        app:srcCompat="@drawable/weBudget" />
+        app:srcCompat="@drawable/webudget" />
 
     <TextView
         android:id="@+id/weBudget_title"
