--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             app:srcCompat="@drawable/webudget" />
 
         <EditText
-            android:id="@+id/email_input"
+            android:id="@+id/username"
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_marginTop="24dp"
@@ -47,7 +47,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_input" />
+            app:layout_constraintTop_toBottomOf="@+id/username" />
 
         <Button
             android:id="@+id/login_button"
