--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="24dp"
             android:ems="10"
-            android:hint="Email Address"
+            android:hint="User Name"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
