--- a/app/src/main/res/layout/activity_master.xml
+++ b/app/src/main/res/layout/activity_master.xml
@@ -9,14 +9,13 @@
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
-        android:layout_width="400dp"
-        android:layout_height="651dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.496">
-
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
