--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,68 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/fragment_home"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.HomeFragment">
 
-    <Button
-        android:id="@+id/home_test_button2"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/roundedbutton"
-        android:text="test1"
-        app:layout_constraintStart_toEndOf="@+id/home_group_button"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginEnd="12dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="3">
 
-    <Button
-        android:id="@+id/home_test_button"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/roundedbutton"
-        android:text="test1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_group_button" />
+        <Button
+            android:id="@+id/home_group_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/roundedbutton"
+            android:text="Groups" />
 
-    <Button
-        android:id="@+id/home_test_button4"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/roundedbutton"
-        android:text="test1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/home_test_button2"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/home_test_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/roundedbutton"
+            android:text="test1" />
 
-    <Button
-        android:id="@+id/home_group_button"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/roundedbutton"
-        android:text="Groups"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/home_test_button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/roundedbutton"
+            android:text="test1" />
 
-    <Button
-        android:id="@+id/home_test_button3"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/roundedbutton"
-        android:text="test1"
-        app:layout_constraintStart_toEndOf="@+id/home_test_button"
-        app:layout_constraintTop_toBottomOf="@+id/home_test_button2" />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
