--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -9,17 +9,16 @@
     android:clickable="true"
     tools:context=".presentation.GroupFragment">
 
-
-    <FrameLayout
-        android:id="@+id/group_fragment_container"
+    <ListView
+        android:id="@+id/group_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        android:layout_height="496dp"
+        app:layout_constraintBottom_toTopOf="@+id/group_create_group_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.496">
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/groups_title"
+        app:layout_constraintVertical_bias="0.0"
+        />
 
     <Button
         android:id="@+id/group_create_group_button"
