--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -40,7 +40,7 @@
         android:text="Recipient Username"
         app:layout_constraintBottom_toTopOf="@+id/recipient_input"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.722"
+        app:layout_constraintHorizontal_bias="0.775"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/transfer_title"
         app:layout_constraintVertical_bias="1.0" />
@@ -131,20 +131,25 @@
         android:id="@+id/recipient_input"
         android:layout_width="175dp"
         android:layout_height="39dp"
-        android:layout_marginBottom="364dp"
+        android:layout_marginBottom="360dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.728"
         app:layout_constraintStart_toEndOf="@+id/amount_input" />
 
     <Button
         android:id="@+id/send_button"
         android:layout_width="125dp"
         android:layout_height="51dp"
+        android:layout_marginTop="96dp"
         android:background="@drawable/roundedbutton"
         android:text="Send Funds"
-        tools:layout_editor_absoluteX="249dp"
-        tools:layout_editor_absoluteY="632dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/transfer_title"
+        app:layout_constraintVertical_bias="0.052" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
