groups ui setup, need grouplogic to finish

--- a/app/src/main/res/layout/fragment_create_group.xml
+++ b/app/src/main/res/layout/fragment_create_group.xml
@@ -13,8 +13,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:ems="10"
+        android:hint="Description"
         android:inputType="textPersonName"
-        android:text="Description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -29,8 +29,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:ems="10"
+        android:hint="Group Name"
         android:inputType="textPersonName"
-        android:text="Group Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
