--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,22 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="Home" />
-    <item
         android:id="@+id/navigation_calendar"
         android:icon="@android:drawable/ic_menu_today"
         android:title="Calendar" />
+    <item
+        android:id="@+id/navigation_groups"
+        android:icon="@drawable/groups"
+        android:title="Groups" />
 
     <item
         android:id="@+id/navigation_account"
         android:icon="@drawable/portfolio"
         android:title="Account" />
-
-    <item
-        android:id="@+id/navigation_settings"
-        android:icon="@drawable/settings"
-        android:title="Settings" />
 
 </menu>
