--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -66,7 +66,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="56dp"
         android:ems="10"
-        android:hint="Group Name"
+        android:hint="Group ID"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/group_create_group_button"
         app:layout_constraintStart_toStartOf="parent"
